--- a/setup.cfg
+++ b/setup.cfg
@@ -8,10 +8,10 @@ requires-dist=
     botocore>=1.12.179
 
 [tool:pytest]
-# Test args for pytest; enable coverage for ec2instanceconnectcli, emit XML, HTML, and terminal reports.
+# Test args for pytest; enable coverage for eicproxylibs, emit XML, HTML, and terminal reports.
 addopts =
     --verbose
-    --cov ec2instanceconnectcli
+    --cov eicproxylibs
     --cov-report term-missing
     --cov-report xml
     --cov-report html
